--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,10 @@
-== README
+== Sistem crawling DA1 & DB1 Pilpres 2014 http://rekapda1.herokuapp.com/
+This project need refactoring
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+DA1 adalah hasil rekapitulasi suara per kecamatan yang merupakan hasil yang telah diplenokan pada tingkatannya. DA1 berisi rekapitulasi beberapa formulir C1 pada tingkat kecamatan
 
-Things you may want to cover:
+DB1 adalah hasil rekapitulasi suara per kabupaten yang merupakan hasil yang telah diplenokan pada tingkatannya. DB1 berisi rekapitulasi beberapa formulir DA1 pada tingkat kabupaten
 
-* Ruby version
+Data ini diambil dari Website KPU berikut: http://pilpres2014.kpu.go.id/da1.php . Data diupdate secara otomatis oleh program setiap 1 jam . Untuk transparansi, source code program ini bisa didownload di https://github.com/fikriauliya/rekapda1 . Tidak ada manipulasi data, silakan dicek codenya atau dicross check langsung dengan data di website KPU
+[Update] Kolom C1 adalah hasil input C1 dari http://kawalpemilu.org . KawalPemilu adalah website crowdsourcing di mana komunitas menginput file scan C1 (step sebelum DA1) secara keroyokan. Sementara formulir DA1 adalah rekapitulasi input C1 yang dilakukan oleh KPU, di mana KPU bisa jadi telah mengkoreksi sebagian kesalahan pada C1. Jika ada perbedaan dalam keduanya, bisa dicek data hingga level kecamatan, kemudian dibandingkan untuk saling
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
